--- a/data/blog/2021-february-report.mdx
+++ b/data/blog/2021-february-report.mdx
@@ -2,7 +2,7 @@
 title: 'Contribution report for Feb. 2021'
 publishedAt: '2021-03-04'
 summary: 'A contribution report for Feb. 2021, by @JohnTitor.'
-image: '/static/avatar.jpg'
+image: '/static/realpic.jpg'
 ---
 
 ## Commits / PRs
