--- a/data/blog/2021-june-report.mdx
+++ b/data/blog/2021-june-report.mdx
@@ -36,7 +36,7 @@ I've been contributing to the rustc-dev-guide since 2019 (it used to be called a
 And now, I'm happy to announce that I'm new co-lead of the WG.
 Huge thanks to [Joshua], the previous co-lead, they've made many contributions.
 
-[Joshua]: https://github.com/jyn514
+[joshua]: https://github.com/jyn514
 
 ## Thanks to all my sponsors!
 
