Upgrade next-mdx-remote to v4 and MDX files to v2

--- a/data/blog/2021-february-report.mdx
+++ b/data/blog/2021-february-report.mdx
@@ -22,13 +22,13 @@ image: '/static/me.png'
   - month-on-month rate: 120% (45 PRs in 11 repos)
   - year-on-year rate: 48% (104 PRs in 28 repos)
 
-(You can find my full contributions in February here: <https://github.com/JohnTitor?tab=overview&from=2021-02-01&to=2021-02-28>)
+(You can find my full contributions in February [here](https://github.com/JohnTitor?tab=overview&from=2021-02-01&to=2021-02-28))
 
 ## Highlighted works
 
 - Reviewed 12 PRs in rust-lang/libc
   - Thanks all the contributors, libc v0.2.87 which includes them should be available now!
-- <https://github.com/rust-lang/www.rust-lang.org/pull/1445>
+- [https://github.com/rust-lang/www.rust-lang.org/pull/1445](https://github.com/rust-lang/www.rust-lang.org/pull/1445)
   - Did you know that the governance page shew the 2019 roadmap until recently?
   - Please check Rust's 2021 roadmap if you haven't read it :) It mentions how we manage Rust teams in the future.
 
@@ -43,11 +43,11 @@ image: '/static/me.png'
 
 My sponsors (February, 2021):
 
-- <https://github.com/crystaldust>
-- <https://github.com/kuy>
-- <https://github.com/raakka>
+- [https://github.com/crystaldust](https://github.com/crystaldust)
+- [https://github.com/kuy](https://github.com/kuy)
+- [https://github.com/raakka](https://github.com/raakka)
 
 ## Want to support my work?
 
-You can support me at <https://github.com/sponsors/JohnTitor>.
+You can support me at [https://github.com/sponsors/JohnTitor](https://github.com/sponsors/JohnTitor).
 It'll definitely help my life and FLOSS work, thanks!
