--- a/data/blog/2021-june-report.mdx
+++ b/data/blog/2021-june-report.mdx
@@ -44,18 +44,18 @@ Sponsoring helps my life and FLOSS work much, thanks!
 
 My sponsors (as of 2021-07-02, ordered by oldest):
 
-- <https://github.com/crystaldust>
-- <https://github.com/kuy>
-- <https://github.com/raakka>
-- <https://github.com/hhatto>
-- <https://github.com/himanoa>
-- <https://github.com/dorayakikun>
-- <https://github.com/romatthe>
-- <https://github.com/freddi-kit>
-- <https://github.com/mshrtsr>
-- <https://github.com/nazar-pc>
-- <https://github.com/uta8a>
+- [https://github.com/crystaldust](https://github.com/crystaldust)
+- [https://github.com/kuy](https://github.com/kuy)
+- [https://github.com/raakka](https://github.com/raakka)
+- [https://github.com/hhatto](https://github.com/hhatto)
+- [https://github.com/himanoa](https://github.com/himanoa)
+- [https://github.com/dorayakikun](https://github.com/dorayakikun)
+- [https://github.com/romatthe](https://github.com/romatthe)
+- [https://github.com/freddi-kit](https://github.com/freddi-kit)
+- [https://github.com/mshrtsr](https://github.com/mshrtsr)
+- [https://github.com/nazar-pc](https://github.com/nazar-pc)
+- [https://github.com/uta8a](https://github.com/uta8a)
 
 ### Want to support my work?
 
-You can support me at <https://github.com/sponsors/JohnTitor>.
+You can support me at [https://github.com/sponsors/JohnTitor](https://github.com/sponsors/JohnTitor).
