--- a/data/blog/2021-march-report.mdx
+++ b/data/blog/2021-march-report.mdx
@@ -17,17 +17,17 @@ image: '/static/me.png'
 - Reviewed 116 PRs in 19 repos
   - month-on-month rate: 214% (54 PRs in 12 repos)
 
-(You can find my full contributions in March here: <https://github.com/JohnTitor?tab=overview&from=2021-03-01&to=2021-03-31>)
+(You can find my full contributions in March [here](https://github.com/JohnTitor?tab=overview&from=2021-03-01&to=2021-03-31))
 
 ## Highlighted works
 
-- <https://github.com/rust-lang/rust/pull/83654>
-- <https://rust-lang.github.io/rustup-components-history/>
+- [https://github.com/rust-lang/rust/pull/83654](https://github.com/rust-lang/rust/pull/83654)
+- [https://rust-lang.github.io/rustup-components-history/](https://rust-lang.github.io/rustup-components-history/)
   - I made some minor improvements on the rustup components history.
     E.g., it now displays "Tier 2.5", previously it was "Tier25".
     Rust had so many tiers!
 - Migrated from Travis CI to GHA on the rustc-dev-guide
-  - <https://github.com/rust-lang/rustc-dev-guide/pull/1073>
+  - [https://github.com/rust-lang/rustc-dev-guide/pull/1073](https://github.com/rust-lang/rustc-dev-guide/pull/1073)
   - So, GHA is now one of my area :)
 
 ## Others / brief review
@@ -44,13 +44,13 @@ image: '/static/me.png'
 
 My sponsors (March, 2021):
 
-- <https://github.com/crystaldust>
-- <https://github.com/kuy>
-- <https://github.com/raakka>
-- <https://github.com/hhatto>
-- <https://github.com/himanoa>
+- [https://github.com/crystaldust](https://github.com/crystaldust)
+- [https://github.com/kuy](https://github.com/kuy)
+- [https://github.com/raakka](https://github.com/raakka)
+- [https://github.com/hhatto](https://github.com/hhatto)
+- [https://github.com/himanoa](https://github.com/himanoa)
 
 ## Want to support my work?
 
-You can support me at <https://github.com/sponsors/JohnTitor>.
+You can support me at [https://github.com/sponsors/JohnTitor](https://github.com/sponsors/JohnTitor).
 It'll definitely help my life and FLOSS work, thanks!
