--- a/data/blog/2021-april-may-report.mdx
+++ b/data/blog/2021-april-may-report.mdx
@@ -9,17 +9,17 @@ image: '/static/me.png'
 
 ### April
 
-- Wrote a Japanese version of the "Rust Perf Book", originally written by Nicholas Nethercote: https://github.com/JohnTitor/perf-book-ja
+- Wrote a Japanese version of the "Rust Perf Book", originally written by Nicholas Nethercote: [https://github.com/JohnTitor/perf-book-ja](https://github.com/JohnTitor/perf-book-ja)
 - Some diagnostics improvements on rustc:
-  - https://github.com/rust-lang/rust/pull/83816
-  - https://github.com/rust-lang/rust/pull/83729
+  - [https://github.com/rust-lang/rust/pull/83816](https://github.com/rust-lang/rust/pull/83816)
+  - [https://github.com/rust-lang/rust/pull/83729](https://github.com/rust-lang/rust/pull/83729)
 
 ### May
 
-- Fix some potential UB on ctest2: https://github.com/JohnTitor/ctest2
+- Fix some potential UB on ctest2: [https://github.com/JohnTitor/ctest2](https://github.com/JohnTitor/ctest2)
   - It's now released as 0.4.1.
-- Reviewed a couple of PRs on the libc crate: https://github.com/rust-lang/libc
-  - v0.2.95 has a lof of new API, try out!: https://crates.io/crates/libc/0.2.95
+- Reviewed a couple of PRs on the libc crate: [https://github.com/rust-lang/libc](https://github.com/rust-lang/libc)
+  - v0.2.95 has a lof of new API, try out!: [https://crates.io/crates/libc/0.2.95](https://crates.io/crates/libc/0.2.95)
 
 ## Others / brief review
 
@@ -30,19 +30,19 @@ image: '/static/me.png'
 
 My sponsors (as of 2021-06-01, ordered by oldest):
 
-- <https://github.com/crystaldust>
-- <https://github.com/kuy>
-- <https://github.com/raakka>
-- <https://github.com/hhatto>
-- <https://github.com/himanoa>
-- <https://github.com/dorayakikun>
-- <https://github.com/romatthe>
-- <https://github.com/freddi-kit>
-- <https://github.com/mshrtsr>
-- <https://github.com/nazar-pc>
-- <https://github.com/uta8a>
+- [https://github.com/crystaldust](https://github.com/crystaldust)
+- [https://github.com/kuy](https://github.com/kuy)
+- [https://github.com/raakka](https://github.com/raakka)
+- [https://github.com/hhatto](https://github.com/hhatto)
+- [https://github.com/himanoa](https://github.com/himanoa)
+- [https://github.com/dorayakikun](https://github.com/dorayakikun)
+- [https://github.com/romatthe](https://github.com/romatthe)
+- [https://github.com/freddi-kit](https://github.com/freddi-kit)
+- [https://github.com/mshrtsr](https://github.com/mshrtsr)
+- [https://github.com/nazar-pc](https://github.com/nazar-pc)
+- [https://github.com/uta8a](https://github.com/uta8a)
 
 ## Want to support my work?
 
-You can support me at <https://github.com/sponsors/JohnTitor>.
+You can support me at [https://github.com/sponsors/JohnTitor](https://github.com/sponsors/JohnTitor).
 It'll definitely help my life and FLOSS work, thanks!
