--- a/data/blog/2021-january-report.mdx
+++ b/data/blog/2021-january-report.mdx
@@ -8,7 +8,7 @@ image: '/static/me.png'
 ## Commits / PRs
 
 - commits: 191 commits in 19 repos
-  - year-on-year rate: 42％ (453 commits in 24 repos)
+  - year-on-year rate: 42% (453 commits in 24 repos)
   - In last year, I made a lot of contributions to Clippy and rust-lang/rust (rustc).
     But I didn't this year because of my physical condition :(
 - PRs: 50 PRs in 13 repos
@@ -19,15 +19,15 @@ image: '/static/me.png'
 - reviewed 45 PRs in 11 repos
   - year-on-year rate: 48% (93 PRs in 18 repos)
   - In last year, I reviewed a lot of PRs related to Actix, but didn't this year
-    (thanks to [@robjtede](https://github.com/robjtede) and [@fakeshadow](https://github.com/fakeshadow) <3).
+    (thanks to [@robjtede](https://github.com/robjtede) and [@fakeshadow](https://github.com/fakeshadow) \<3).
 
-(You can find my full contributions in January here: <https://github.com/JohnTitor?tab=overview&from=2021-01-01&to=2021-01-31>)
+(You can find my full contributions in January [here](https://github.com/JohnTitor?tab=overview&from=2021-01-01&to=2021-01-31))
 
 ## Highlighted works
 
-- Do not suggest invalid code in pattern with loop: <https://github.com/rust-lang/rust/pull/80941>
+- Do not suggest invalid code in pattern with loop: [https://github.com/rust-lang/rust/pull/80941](https://github.com/rust-lang/rust/pull/80941)
   - Now rustc doesn't emit an invalid suggestions with moved value error on `loop` + `if let`.
-- <https://os.phil-opp.com/ja/>
+- [https://os.phil-opp.com/ja/](https://os.phil-opp.com/ja/)
   - We've done translations for the "bare bones" part (I helped all the posts as a reviewer/co-translator).
 
 ## Others / brief review
@@ -41,10 +41,10 @@ image: '/static/me.png'
 
 My sponsors (January, 2021):
 
-- <https://github.com/crystaldust>
-- <https://github.com/kuy>
-- <https://github.com/raakka>
+- [https://github.com/crystaldust](https://github.com/crystaldust)
+- [https://github.com/kuy](https://github.com/kuy)
+- [https://github.com/raakka](https://github.com/raakka)
 
 ## Want to support my work?
 
-You can support me at <https://github.com/sponsors/JohnTitor>.
+You can support me at [https://github.com/sponsors/JohnTitor](https://github.com/sponsors/JohnTitor).
