Update my avatar image

--- a/data/blog/2021-april-may-report.mdx
+++ b/data/blog/2021-april-may-report.mdx
@@ -2,7 +2,7 @@
 title: 'Contribution report for Apr. and May 2021'
 publishedAt: '2021-06-01'
 summary: 'A contribution report for Apr. and May 2021, by @JohnTitor.'
-image: '/static/me.png'
+image: '/static/me.jpg'
 ---
 
 ## Highlighted works
