--- a/data/blog/2021-june-report.mdx
+++ b/data/blog/2021-june-report.mdx
@@ -2,7 +2,7 @@
 title: 'Contribution report for Jun. 2021'
 publishedAt: '2021-07-02'
 summary: 'A contribution report for Jun. 2021, by @JohnTitor.'
-image: '/static/me.png'
+image: '/static/me.jpg'
 ---
 
 ## Highlighted works
