--- a/data/blog/2021-january-report.mdx
+++ b/data/blog/2021-january-report.mdx
@@ -2,7 +2,7 @@
 title: Contribution report for Jan. 2021
 publishedAt: '2021-02-13'
 summary: A contribution report for Jan. 2021, by @JohnTitor.
-image: '/static/me.png'
+image: '/static/me.jpg'
 ---
 
 ## Commits / PRs
