--- a/data/blog/2021-march-report.mdx
+++ b/data/blog/2021-march-report.mdx
@@ -2,7 +2,7 @@
 title: 'Contribution report for Mar. 2021'
 publishedAt: '2021-04-02'
 summary: 'A contribution report for Mar. 2021, by @JohnTitor.'
-image: '/static/me.png'
+image: '/static/me.jpg'
 ---
 
 ## Commits / PRs
