--- a/data/blog/2021-february-report.mdx
+++ b/data/blog/2021-february-report.mdx
@@ -9,7 +9,7 @@ image: '/static/me.jpg'
 
 - commits: 101 commits in 19 repos
   - month-on-month rate: 52% (191 commits in 19 repos)
-  - year-on-year rate: 33％ (300 commits in 29 repos)
+  - year-on-year rate: 33% (300 commits in 29 repos)
 - PRs: 26 PRs in 6 repos
   - month-on-month rate: 52% (50 PRs in 13 repos)
   - year-on-year rate: 36% (123 PRs in 24 repos)
