Add sponsor link
Signed-off-by: Yuki Okushi <jtitor@2k36.org>

--- a/data/blog/state-of-2022.mdx
+++ b/data/blog/state-of-2022.mdx
@@ -63,5 +63,6 @@ I'm sure making such policies will be difficult and controversial,
 but I think it's necessary to make the crate more maintainable.
 
 If you find my work useful, please consider sponsoring me. It definitely helps me and my life a lot.
+You can sponsor me via [GitHub Sponsors](https://github.com/sponsors/JohnTitor).
 
 [^1]: Noticed that there are fewer contributions at the begging of the year? That's because I was ["endwalk"](https://na.finalfantasyxiv.com/endwalker/)ing.
